--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -3,7 +3,7 @@ name: Publish to PyPI
 on:
   push:
     tags:
-      - "v*" # Trigger on version tags (e.g., v1.0.0)
+      - "*" # Trigger on any version tags (e.g., 1.0.0)
 
 jobs:
   publish:
