--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -22,5 +22,5 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/claimm:latest
-            ghcr.io/${{ github.repository_owner }}/claimm:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner | toLowerCase }}/claimm:latest
+            ghcr.io/${{ github.repository_owner | toLowerCase }}/claimm:${{ github.sha }}
